// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FAQScreen mapStateToProps should handle errors 1`] = `
Object {
  "error": true,
  "faqSections": Array [
    Object {
      "id": 1234,
    },
  ],
  "isLoading": false,
}
`;

exports[`FAQScreen mapStateToProps should handle no errors 1`] = `
Object {
  "error": false,
  "faqSections": Array [
    Object {
      "id": 1234,
    },
  ],
  "isLoading": false,
}
`;

exports[`FAQScreen should mapDispatchToProps 1`] = `
Object {
  "actions": Object {
    "getNamedSharedItem": [Function],
  },
}
`;

exports[`FAQScreen should render an error message 1`] = `
<View
  style={
    Array [
      Object {
        "flexGrow": 1,
      },
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
    ]
  }
>
  <Text>
    Could not retrieve FAQ at this time.
  </Text>
</View>
`;

exports[`FAQScreen should render with full props 1`] = `
<RCTScrollView>
  <View>
    <TemplateComponent
      contentItem={
        Object {
          "id": 1234,
        }
      }
    />
  </View>
</RCTScrollView>
`;
